# botframe

./: .gitignore
.github/workflows/: linux_old_build.yml  mac_build.yml  mac_build_universal.yml  rust.yml  win_build.yml
rust/botframework/: .gitignore  Cargo.toml  Untitled.ipynb  pyproject.toml  requirements.txt
rust/botframework/TEST/html/: lw.html
rust/botframework/TEST/python/: breakout.py  breakout_agent.ipynb  breakout_agent_debug.ipynb  chart.ipynb  dummy_agent.ipynb  dummy_agent.py  html_test.ipynb  loadlibrary.py  log_return_research.ipynb  lw_test.ipynb  ml_g_research.ipynb  richman_tutorial_bb.ipynb  select_raw_data.ipynb
rust/botframework/TEST/python/.ipynb_checkpoints/: breakout_agent-checkpoint.ipynb
rust/botframework/python/rbot/: __init__.py  lightweight.py
rust/botframework/src/: lib.rs  pyutil.rs
rust/botframework/src/BB/: log.rs  market.rs  message.rs  mod.rs  test.rs  testdata.rs
rust/botframework/src/bb/: log.rs  market.rs  message.rs  mod.rs  test.rs  testdata.rs
rust/botframework/src/exchange/: mod.rs  order.rs  session.rs
rust/rbot/: Cargo.toml
rust/rbot/python/rbot/: __init__.py
rust/rbot/src/: lib.rs
rust/rbot/src/common/: mod.rs  order.rs  time.rs
rust/rbot/src/db/: df.rs  mod.rs  sqlite.rs
rust/rbot/src/exchange/: mod.rs
rust/rbot/src/exchange/binance/: mod.rs
rust/rbot/src/exchange/ftx/: message.rs  mod.rs  rest.rs
rust/rbot/src/fs/: mod.rs
rust/rbot/src/sim/: back.rs  market.rs  mod.rs  session.rs
rust/rbot/src/test/: analyze_ftx_log.ipynb  backtest.py  main_test.py  simple_test.py
rust/rustdf/: .gitignore  Cargo.toml  pyproject.toml
rust/rustdf/src/: dataframe.rs  lib.rs
rust/sandbox/: Cargo.toml  pyproject.toml
rust/sandbox/python/sandbox/: __init__.py
rust/sandbox/src/: lib.rs
rust/sandbox/src/db/: exec.rs  mod.rs
rust/sandbox/util/: create_db.sql
