[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbot"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.0"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls", "stream"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

url = "2.2.2"
futures-util = "0.3.21"
failure="*"

polars = "0.14.7"
polars-core = {version = "0.14.7", features=["ndarray"]}
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}
polars-lazy = "0.20"

flate2= "*"
thiserror = "*"

time = "0.1"
directories = "4.0"

chrono="*"

