[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbot"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.16.3", features = ["auto-initialize"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.0"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls", "stream"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

url = "2.2.2"
futures-util = "0.3.21"
failure="0.1.8"

polars = {version="0.22"}
polars-core = {version = "0.22", features=["ndarray", "temporal", "dtype-time"]}
polars-lazy = {version="0.22", features=[]}
smartcore = { version = "0.2.1", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}


flate2= "1.0.24"
thiserror = "1.0.31"
time = "0.3.9"

directories= "4.0.1"

chrono="0.4.19"

numpy = "0.16.2"
ndarray = "0.15.4"

parse_duration="2.1.1"

async-std="1.11.0"



