[package]
name = "rbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbot"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.16.5", features = ["auto-initialize", "extension-module"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.19.2", features = ["full"] }
tungstenite = "0.17.0"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls", "stream"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

url = "2.2.2"
futures-util = "0.3.21"
failure="0.1.8"

polars = {version="0.22.7"}
polars-core = {version = "0.22.7", features=["ndarray", "temporal", "dtype-time", "object"]}
polars-lazy = {version="0.22.7", features=["dynamic_groupby"]}
polars-io = {version="0.22.7", features=["ipc"]}
smartcore = { version = "0.2.1", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}


flate2= "1.0.24"
thiserror = "1.0.31"
time = "0.3.11"

directories= "4.0.1"

chrono="0.4.19"

numpy = "0.16.2"
ndarray = "0.15.4"

parse_duration="2.1.1"

async-std="1.12.0"

log = "0.4.17"
env_logger = "0.9.0"



[package.metadata.maturin]
python-source = "python"



