[package]
name = "rustdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustdf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }

# for data fusion
datafusion = { version = "^8.0.0", features = ["pyarrow"] }
datafusion-expr = { version = "^8.0.0" }
datafusion-common = { version = "^8.0.0", features = ["pyarrow"] }

# tokio
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }

polars = "0.22.0"
polars-core = {version = "0.22.3", features=["ndarray"]}
smartcore = { version = "0.2.0", default-features = false, features=["nalgebra-bindings", "ndarray-bindings", "datasets"]}
polars-lazy = "0.22.0"

arrow="15.0.0"


